--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
   "name": "@digitum/well-known",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Fetch openid well-known information",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon tests/index.js --exec babel"
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/dev.ts",
+    "test": "jest --detectOpenHandles --config jestconfig.json"
   },
   "author": "Odd Holstensson",
   "license": "ISC",
   "dependencies": {
-    "ms": "^2.1.1"
+    "ms": "^2.1.2",
+    "ts-node-dev": "^1.0.0-pre.62",
+    "typescript": "^4.0.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4",
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
-    "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.1.0"
+    "@types/jest": "^26.0.13",
+    "@types/ms": "^0.7.31",
+    "@types/node": "^14.6.3",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.3.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Digitum/well-known"
   }
 }
